# BinaryFileConvert

./: .gitignore  CMakeLists.txt  main.cpp  setup.ps1
